# advent-of-code

./: .gitignore  .gitmodules
2015/: Cargo.toml  bench.sh
2015/src/: main.rs
2015/src/days/: mod.rs
2015/src/days/common/: mod.rs
2015/src/days/day_2/: mod.rs
2018/day_one/: file.py
2018/day_three/: file.py
2018/day_two/: file.py
2019/day_1/: main.py
2019/day_2/: input.txt  main.py
2019/day_3/: main.py
2019/day_4/: main.py
2019/day_5/: main.py
2019/day_6/: main.py
2019/day_7/: intcode.py  main.py
2020/1/: main.py
2020/10/: main.go  test3.txt
2020/11/: main.go
2020/12/: main.go  main_test.go
2020/13/: main.go  test3.txt
2020/14/: main.go  test3.txt
2020/15/: .gitignore  main.go
2020/16/: main.go
2020/17/: main.go
2020/18/: main.go
2020/19/: main.go  test.txt
2020/2/: main.go
2020/3/: main.py
2020/4/: main.py  passport.py
2020/5/: main.go
2020/6/: main.go
2020/7/: main.go
2020/8/: main.go
2020/9/: main.go
2020_rust/src/: config.rs  main.rs
2020_rust/src/days/: mod.rs
2020_rust/src/days/common/: mod.rs
2020_rust/src/days/day_0/: mod.rs
2020_rust/src/days/day_1/: mod.rs
2020_rust/src/days/day_2/: mod.rs  mod_old.rs
2020_rust/src/days/day_3/: mod.rs
2021/: .env.example  Cargo.toml
2021/src/: main.rs
2021/src/days/: mod.rs
2021/src/days/day_0/: mod.rs
2021/src/days/day_1/: mod.rs
2021/src/days/day_10/: mod.rs
2021/src/days/day_11/: mod.rs
2021/src/days/day_12/: mod.rs
2021/src/days/day_13/: mod.rs
2021/src/days/day_14/: mod.rs
2021/src/days/day_15/: mod.rs
(+11 files in other folders)
