[package]
name = "aoc_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["blocking", "rustls-tls", "cookies"]